# dio_bank

./: .gitignore  pyproject.toml
instance/: blog.sqlite  dio_bank.sqlite
migrations/versions/: 3a2e999c8dab_add_password_field.py  3acddbc482e2_add_active_attr_in_user.py  774cd81f34ee_initial_migration.py  bd486b6f47bd_initial_migration.py
src/: app.py  db.py  utils.py
src/controllers/: auth.py  role.py  user.py
src/models/: __init__.py  post.py  role.py  user.py
tests/: test_utils.py
