[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-sqlalchemy = "*"
black = "^24.10.0"
flask-migrate = "*"
flask-jwt-extended = "*"
pytest = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = "-ra -vvv"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
